fix: add tests && small naming changes

--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
     "type": "module",
     "scripts": {
         "dev": "tsx src/main.ts",
-        "build": "tsc -p tsconfig.json",
-        "test": "vitest run"
+        "test": "cross-env ERROR_PROBABILITY=0 HANG_PROBABILITY=0 PORT=0 vitest run"
     },
     "devDependencies": {
         "@types/debug": "^4.1.12",
-        "prettier": "^3.6.2",
+        "cross-env": "^7.0.3",
         "tsx": "^4.20.6",
         "typescript": "^5.6.3",
-        "vitest": "^2.0.0"
+        "vitest": "^2.1.1"
     },
     "dependencies": {
         "debug": "^4.3.7"
