--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "ES2022",
         "moduleResolution": "Bundler",
         "outDir": "dist",
-        "rootDir": "src",
+        "rootDirs": ["src", "test"],
         "strict": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
